--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!-- Gallery -->
 <html>
 	</head>
-	<link href="1.css" rel="stylesheet" type="text/css"/>
+	<link href="romantic.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src='1.js'></script>
 	</head>
 <section class="gallery">
   <h1>Romantic Love By Lee</h1>
