--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!-- Gallery -->
 <html>
 	</head>
-	<link href="romantic.css" rel="stylesheet" type="text/css"/>
+	<link href="1.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src='1.js'></script>
 	</head>
 <section class="gallery">
   <h1>Romantic Love By Lee</h1>
   <p class="logo">		
      <span class="heart"></span>	
   </p>
+  <div class='right'>
   <div class='poem'>
 	  垂下头来，在红光闪耀的炉子旁，<br>
 	  凄然地轻轻诉说那爱情的消逝，<br>
@@ -29,6 +31,7 @@
   </div>
   <p class="author">——叶芝</p>
   <p class="title">当你老了</p>
+  </div>
   <ol>
     <li>
 	 <a > <div class="info"> <h3></h3> <p></p> </div></a>
