--- a/poem.html
+++ b/poem.html
@@ -2,6 +2,7 @@
 <head>
 <link href="poem.css" rel="stylesheet" type="text/css"/>
 <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="container">
 <p align="center" class="happy2">When You Are Old </p>
